@@ -9,8 +9,9 @@
 - AI / WM:
 	- Improvements to the Orbital AI
 		- PID control option available, by default is active only during weapon firing, can be toggled to be active always or never active.
-		- Add option to engage head-on or broadside.
-		- Add option to set which side of the ship AI will present toward target using roll control (only active when PID is enabled).
+		- If a fixed weapon is selected, AI will orient itself to fire the weapon, even if the weapon is not aligned with the forward direction of the craft.
+		- Add option to engage head-on or broadside (for use with turreted weapons).
+		- Add option to select broadside direction (only active when PID is enabled).
 		- Improved maneuvering behavior, it is now better at intercepting targets, killing velocity, and prioritizes combat over minor orbital corrections when within combat range.
 		- AI will not engage vessels if doing so will put the AI in risk of de-orbiting.
 		- Fixed AI repeatedly jumping back and forth between orbit correction and other modes.
